--- a/p8105_hw1_ys3297.md
+++ b/p8105_hw1_ys3297.md
@@ -24,13 +24,13 @@ Try to take the mean of each variable in the data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] -0.2087822
+    ## [1] -0.3052596
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.5
+    ## [1] 0.3
 
 ``` r
 mean(pull(prob1_df, char_leng_10))
@@ -77,8 +77,8 @@ not numbers and even cannot be converted into numeric values.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.3698591 0.0000000 0.0000000 0.0000000 0.0000000 0.2406523 0.1251920
-    ##  [8] 0.7944223 0.7285912 0.0000000
+    ##  [1] 0.0000000 0.0000000 0.0000000 0.0000000 1.9748282 0.0000000 0.5304930
+    ##  [8] 0.0000000 0.6814576 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -93,8 +93,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1]  0.7397181 -0.9018460 -0.9024411 -0.1486792 -1.7464633  0.4813046
-    ##  [7]  0.2503840  1.5888445  1.4571823 -0.6471096
+    ##  [1] -1.58036907 -1.20690849 -0.37986687 -0.44619294  3.94965640 -1.28876805
+    ##  [7]  1.06098602 -1.26310944  1.36291526 -0.07416046
 
 `as.factor` function can convert logical variables into factor
 variables, but the result of conversion cannot directly multiply numeric
@@ -131,8 +131,7 @@ This dataset has 344 rows and 8 columns.
 The mean flipper length is 200.9152047 mm.
 
 Make a scatterplot of `flipper_length_mm` (y) vs `bill_length_mm` (x)
-and color points using the `species` variable. The scatterplot will be
-saved as “hw1\_prob2\_scatterplot.png”.
+and color points using the `species` variable.
 
 ``` r
 ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
@@ -149,3 +148,5 @@ ggsave(file = "hw1_prob2_scatterplot.png")
     ## Saving 7 x 5 in image
 
     ## Warning: Removed 2 rows containing missing values (geom_point).
+
+The scatterplot is saved as “hw1\_prob2\_scatterplot.png”.
