--- a/p8105_hw1_ys3297.md
+++ b/p8105_hw1_ys3297.md
@@ -4,6 +4,8 @@ Yi Sun
 
 Solution to HW1.
 
+Load the package `tidyverse`.
+
 # Problem 1
 
 Create a data frame comprised of specified elements.
@@ -24,7 +26,7 @@ Try to take the mean of each variable in the data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] -0.3052596
+    ## [1] -0.1322158
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
@@ -53,6 +55,10 @@ mean(pull(prob1_df, factor_3_lvl))
 I can only take the mean of numeric or logical variables but not
 character or factor variables.
 
+Try to convert the logical variable `samp_gt_0`, character variable
+`char_leng_10`, and factor variable `factor_3_lvl` into numeric
+variables.
+
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 as.numeric(pull(prob1_df, char_leng_10))
@@ -73,12 +79,15 @@ variables are interpreted as “1” for “yes” and “0” for “no” when
 the mean. String values of character variables including characters are
 not numbers and even cannot be converted into numeric values.
 
+Try to multiply the numeric variable `samp` by the results of different
+conversions on the logical variable `samp_gt_0`.
+
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.0000000 0.0000000 0.0000000 0.0000000 1.9748282 0.0000000 0.5304930
-    ##  [8] 0.0000000 0.6814576 0.0000000
+    ##  [1] 0.6069950 0.0000000 0.0000000 0.0000000 0.0000000 0.1518495 1.1618484
+    ##  [8] 0.0000000 0.0000000 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -93,8 +102,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1] -1.58036907 -1.20690849 -0.37986687 -0.44619294  3.94965640 -1.28876805
-    ##  [7]  1.06098602 -1.26310944  1.36291526 -0.07416046
+    ##  [1]  1.21399004 -0.42872268 -0.09216052 -0.40422677 -0.21826499  0.30369899
+    ##  [7]  2.32369690 -0.58805121 -0.92785830 -0.58356674
 
 `as.factor` function can convert logical variables into factor
 variables, but the result of conversion cannot directly multiply numeric
@@ -139,7 +148,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)
 
     ## Warning: Removed 2 rows containing missing values (geom_point).
 
-![](p8105_hw1_ys3297_files/figure-gfm/scatterplot-1.png)<!-- -->
+![](p8105_hw1_ys3297_files/figure-gfm/prob2_scatterplot-1.png)<!-- -->
 
 ``` r
 ggsave(file = "hw1_prob2_scatterplot.png")
