--- a/p8105_hw1_ys3297.md
+++ b/p8105_hw1_ys3297.md
@@ -24,13 +24,13 @@ Try to take the mean of each variable in the data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.9588966
+    ## [1] 0.158122
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.9
+    ## [1] 0.4
 
 ``` r
 mean(pull(prob1_df, char_leng_10))
@@ -73,9 +73,9 @@ character variable can be converted into numeric values).
 This may help explain why I can only take the mean of numeric or logical
 variables: values of factor variables are not numbers before factor
 variables are converted into numeric variables, and values of logical
-variables are interpreted as “1” for “yes” and “0” for “no” when I take
-the mean. String values of character variables including characters are
-not numbers and even cannot be converted into numeric values.
+variables are interpreted as 1 for TRUE and 0 for FALSE when I take the
+mean. String values of character variables including characters are not
+numbers and even cannot be converted into numeric values.
 
 Try to multiply the numeric variable `samp` by the results of different
 conversions on the logical variable `samp_gt_0`.
@@ -84,8 +84,8 @@ conversions on the logical variable `samp_gt_0`.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 2.1142320 0.8349165 0.0000000 1.8076105 0.9440960 1.9261861 0.6466740
-    ##  [8] 0.2580032 0.9483208 0.9442442
+    ##  [1] 1.3356798 0.0000000 1.5042237 0.0000000 0.0000000 1.7647779 0.2724482
+    ##  [8] 0.0000000 0.0000000 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -100,8 +100,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1]  4.2284639  1.6698330 -0.8353173  3.6152210  1.8881920  3.8523722
-    ##  [7]  1.2933479  0.5160064  1.8966416  1.8884884
+    ##  [1]  2.6713596908 -0.4184553140  3.0084474896 -1.5856859979 -0.1186194310
+    ##  [6]  3.5295557501  0.5448964909 -0.7004187102 -0.4724510774 -0.0002787046
 
 `as.factor` function can convert logical variables into factor
 variables, but the result of conversion cannot directly multiply numeric
