--- a/p8105_hw1_ys3297.md
+++ b/p8105_hw1_ys3297.md
@@ -24,13 +24,13 @@ Try to take the mean of each variable in the data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.158122
+    ## [1] 0.1277595
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.4
+    ## [1] 0.5
 
 ``` r
 mean(pull(prob1_df, char_leng_10))
@@ -84,8 +84,8 @@ conversions on the logical variable `samp_gt_0`.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 1.3356798 0.0000000 1.5042237 0.0000000 0.0000000 1.7647779 0.2724482
-    ##  [8] 0.0000000 0.0000000 0.0000000
+    ##  [1] 0.0000000 0.0000000 0.0000000 0.6876299 1.2888646 0.6571677 2.2355476
+    ##  [8] 0.0000000 0.0000000 0.2727835
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -100,8 +100,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1]  2.6713596908 -0.4184553140  3.0084474896 -1.5856859979 -0.1186194310
-    ##  [6]  3.5295557501  0.5448964909 -0.7004187102 -0.4724510774 -0.0002787046
+    ##  [1] -0.4102722 -0.1593489 -2.1891101  1.3752597  2.5777291  1.3143354
+    ##  [7]  4.4710951 -0.9466807 -0.1589861  0.5455670
 
 `as.factor` function can convert logical variables into factor
 variables, but the result of conversion cannot directly multiply numeric
@@ -132,6 +132,16 @@ summary(penguins)
     ##  3rd Qu.:213.0     3rd Qu.:4750                3rd Qu.:2009  
     ##  Max.   :231.0     Max.   :6300                Max.   :2009  
     ##  NA's   :2         NA's   :2
+
+The factor variable `species` has 3 levels: Adelie, Chinstrap, Gentoo.
+
+The factor variable `island` has 3 levels: Biscoe, Dream, Torgersen.
+
+The numeric variable `bill_length_mm`’s range is (32.1, 59.6), and its
+mean is 43.9219298.
+
+The integer variable `flipper_length_mm`’s range is (172, 231), and its
+median is 197.
 
 This dataset has 344 rows and 8 columns.
 
