--- a/p8105_hw1_ys3297.md
+++ b/p8105_hw1_ys3297.md
@@ -24,13 +24,13 @@ Try to take the mean of each variable in the data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.1277595
+    ## [1] -0.09515283
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.5
+    ## [1] 0.7
 
 ``` r
 mean(pull(prob1_df, char_leng_10))
@@ -84,8 +84,8 @@ conversions on the logical variable `samp_gt_0`.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.0000000 0.0000000 0.0000000 0.6876299 1.2888646 0.6571677 2.2355476
-    ##  [8] 0.0000000 0.0000000 0.2727835
+    ##  [1] 0.0000000 0.8661633 0.5113095 0.2834868 0.4566616 0.0000000 0.1324984
+    ##  [8] 0.0819900 0.7035976 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -100,8 +100,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1] -0.4102722 -0.1593489 -2.1891101  1.3752597  2.5777291  1.3143354
-    ##  [7]  4.4710951 -0.9466807 -0.1589861  0.5455670
+    ##  [1] -1.6276456  1.7323266  1.0226191  0.5669737  0.9133233 -0.7126484
+    ##  [7]  0.2649967  0.1639800  1.4071952 -1.6469416
 
 `as.factor` function can convert logical variables into factor
 variables, but the result of conversion cannot directly multiply numeric
@@ -132,6 +132,9 @@ summary(penguins)
     ##  3rd Qu.:213.0     3rd Qu.:4750                3rd Qu.:2009  
     ##  Max.   :231.0     Max.   :6300                Max.   :2009  
     ##  NA's   :2         NA's   :2
+
+Variables in this dataset include: species, island, bill\_length\_mm,
+bill\_depth\_mm, flipper\_length\_mm, body\_mass\_g, sex, year.
 
 The factor variable `species` has 3 levels: Adelie, Chinstrap, Gentoo.
 
